# Go_Game

./: .clang-format  CMakeLists.txt  README.md  Tasks  flake.nix
src/: CMakeLists.txt
src/App/: CMakeLists.txt  Logging.hpp  gameServer.cpp  position.cpp  sessionManager.cpp
src/App/include/app/: IAppSignalListener.hpp  gameServer.hpp  position.hpp  sessionManager.hpp
src/Camera/: BoardDetect.hpp  CMakeLists.txt  README.md  boardFinder.cpp  debugVisualizer.cpp  gridFinder.cpp  gridFinder.hpp  main.cpp  rectifier.cpp  statistics.cpp  statistics.hpp  stoneFinder.cpp
src/Camera/include/camera/: boardFinder.hpp  debugVisualizer.hpp  rectifier.hpp  stoneFinder.hpp
src/CameraTuner/: CMakeLists.txt  README.md  main.cpp
src/Core/: CMakeLists.txt  position.cpp
src/Core/include/core/: IGameSignalListener.hpp  moveChecker.hpp  sgfHandler.hpp
src/Data/: CMakeLists.txt  board.cpp
src/GameNet/: CMakeLists.txt
src/GameNet/include/gameNet/: nwEvents.hpp
src/GoCamera/: README.md
src/Network/: CMakeLists.txt  README.md  connection.cpp  connection.hpp
src/appTerminal/: CMakeLists.txt  main.cpp  terminalUI.cpp  terminalUI.hpp
src/apps/gameTerminal/: CMakeLists.txt  main.cpp
src/apps/gui/: BoardWidget.cpp  BoardWidget.hpp  CMakeLists.txt  ConnectDialog.cpp  ConnectDialog.hpp  GameWidget.cpp  GameWidget.hpp  HostDialog.hpp  MainWindow.cpp  MainWindow.hpp  boardRenderer.cpp  boardRenderer.hpp  main.cpp
src/apps/runtime/: CMakeLists.txt  eventHub.cpp  gameServer.cpp  logging.cpp  logging.hpp  position.cpp  sessionManager.cpp
src/apps/runtime/include/app/: gameServer.hpp  position.hpp  sessionManager.hpp
src/apps/runtime/include/tengen/: IAppSignalListener.hpp  eventHub.hpp  sessionManager.hpp
src/apps/server/: CMakeLists.txt  main.cpp
src/apps/tengen/: BoardWidget.hpp  CMakeLists.txt  HostDialog.cpp  Logging.cpp  Logging.hpp  MainWindow.cpp  MainWindow.hpp
src/core/: CMakeLists.txt  README.md  SafeQueue.hpp  board.cpp  board.hpp  boardLogic.cpp  boardLogic.hpp  coordinate.hpp  eventHub.cpp  game.cpp  game.hpp  gameEvent.hpp  main.cpp  moveChecker.cpp  notificationHandler.cpp  sgfHandler.cpp  sgfHandler.hpp  types.hpp  zobristHash.hpp
src/core/include/core/: IGameListener.hpp  IZobristHash.hpp  SafeQueue.hpp  board.hpp  eventHub.hpp  game.hpp  gameEvent.hpp  moveChecker.hpp  notificationHandler.hpp  sgfHandler.hpp  types.hpp
src/game/: game.hpp  main.cpp
src/game/core/: CMakeLists.txt  eventHub.cpp  game.cpp  moveChecker.cpp  position.cpp  sgfHandler.cpp  zobristHash.hpp
src/game/core/include/core/: IGameSignalListener.hpp  IGameStateListener.hpp  IZobristHash.hpp  SafeQueue.hpp  eventHub.hpp  game.hpp  gameEvent.hpp  (+3 more)
src/game/model/: CMakeLists.txt  board.cpp
src/gui/: BoardWidget.cpp  BoardWidget.hpp  CMakeLists.txt  ConnectDialog.cpp  ConnectDialog.hpp  GameWidget.cpp  GameWidget.hpp  GameWindow.cpp  GameWindow.hpp  HostDialog.cpp  HostDialog.hpp  IAppSignalListener.hpp  IGameSignalListener.hpp  Logging.cpp  Logging.hpp  MainWindow.cpp  MainWindow.hpp  SdlBoardWidget.cpp  SdlBoardWidget.hpp  board.cpp  board.hpp  boardRenderer.cpp  boardRenderer.hpp  eventHub.cpp  eventHub.hpp  game.cpp  game.hpp  gameWindow.cpp  gameWindow.hpp  main.cpp  sessionManager.cpp  sessionManager.hpp  window.cpp  window.hpp
src/libApp/: CMakeLists.txt  Logging.cpp  eventHub.cpp  gameServer.cpp  position.cpp  sessionManager.cpp
src/libApp/include/app/: gameServer.hpp  position.hpp  sessionManager.hpp
src/libCamera/: BoardDetect.cpp  BoardDetect.hpp  CMakeLists.txt  main.cpp
src/libCore/: CMakeLists.txt  README.md  board.cpp  eventHub.cpp  game.cpp  moveChecker.cpp  position.cpp  sgfHandler.cpp  zobristHash.hpp
src/libCore/include/core/: IZobristHash.hpp  board.hpp  eventHub.hpp  game.hpp  gameEvent.hpp  moveChecker.hpp  position.hpp  sgfHandler.hpp  types.hpp
src/libData/: CMakeLists.txt  ClockAbsolute.hpp  ClockByoYomi.hpp  ClockFischer.hpp  board.cpp  clock.cpp
src/libData/include/data/: board.hpp  clock.hpp  clockHandler.hpp  coordinate.hpp  player.hpp  position.hpp
src/libGameNet/: CMakeLists.txt  README.md  SafeQueue.hpp  client.cpp  networkClient.hpp  nwEvents.cpp  protocol.cpp  server.cpp  serverEvents.hpp  sessionManager.cpp  sessionManager.hpp
src/libGameNet/include/gameNet/: client.hpp  nwEvents.hpp  protocol.hpp  server.hpp  sessionManager.hpp  types.hpp
src/libNetwork/: CMakeLists.txt  Logging.cpp  Logging.hpp  client.cpp  connection.cpp  connection.hpp  protocol.cpp  server.cpp  tcpClient.cpp  tcpServer.cpp
src/libNetwork/include/network/: client.hpp  connection.hpp  protocol.hpp  server.hpp  tcpClient.hpp  tcpServer.hpp
src/net/core/: CMakeLists.txt  connection.cpp  connection.hpp  tcpClient.cpp  tcpServer.cpp
src/net/gameNet/: serverEvents.hpp
src/net/network/: CMakeLists.txt  README.md  SafeQueue.hpp  client.cpp  nwEvents.cpp  server.cpp  serverEvents.hpp  sessionManager.cpp  sessionManager.hpp
src/networking/: CMakeLists.txt  Logging.cpp  Logging.hpp  client.cpp  server.cpp
src/networking/include/networking/: client.hpp  protocol.hpp  server.hpp
src/server/: CMakeLists.txt  GameServer.cpp  GameServer.hpp  Logging.cpp  Logging.hpp  gameServer.cpp  gameServer.hpp  main.cpp  serverEvents.hpp  sessionManager.cpp  sessionManager.hpp
src/vision/: CMakeLists.txt
src/vision/core/: CMakeLists.txt  boardFinder.cpp  debugVisualizer.cpp  gridFinder.cpp  gridFinder.hpp  rectifier.cpp  statistics.cpp  statistics.hpp  stoneFinder.cpp
src/vision/perception/: CMakeLists.txt
tests/camera/: CMakeLists.txt  boardDetect.gtest.cpp  boardFinder.gtest.cpp  process.gtest.cpp  rectifier.gtest.cpp  stoneFinder.gtest.cpp
tests/core/: CMakeLists.txt  game.gtest.cpp  moveChecker.gtest.cpp
tests/game/core/: CMakeLists.txt  game.gtest.cpp  moveChecker.gtest.cpp
tests/gameNet/: CMakeLists.txt  basic.gtest.cpp  mockClient.cpp  mockClient.hpp  mockServer.cpp  mockServer.hpp  nwEvents.gtest.cpp
tests/net/core/: CMakeLists.txt  server.gtest.cpp
tests/network/: CMakeLists.txt  server.gtest.cpp
tools/visionTuner/: CMakeLists.txt  main.cpp
(+62 files in other folders)
